# RayViewMeta

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-macos.yml
examples/: test_pubmed.rs
scripts/: build-macos.sh
server/: Cargo.toml
server/shared/src/: lib.rs
server/src/: api.rs  error.rs  main.rs  state.rs  store.rs
shared/src/: lib.rs
src/: api.rs  app.rs  assets.rs  doi.rs  main.rs  pdf.rs  pubmed.rs  single_instance.rs  tasks.rs  translation.rs
src/ui/: detail.rs  export_panel.rs  library.rs  mod.rs  project_management.rs  settings.rs  status_bar.rs  theme.rs  top_bar.rs  upload.rs
