[package]
name = "rayview-meta-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rayview-client"
path = "src/main.rs"

[dependencies]
shared = { path = "shared" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["default"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf-extract = "0.7"
rfd = "0.15"
regex = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
anyhow = "1"
once_cell = "1"
url = "2"
rust_xlsxwriter = "0.94.0"
image = { version = "0.25", default-features = false, features = ["png"] }
scraper = "0.20"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
