[package]
name = "rayview-meta-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rayview-client"
path = "src/main.rs"

[dependencies]
shared = { path = "shared" }
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
egui = "0.34.1"
egui_extras = { version = "0.34.1", features = ["default"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
pdf-extract = "0.10.0"
rfd = "0.17.2"
regex = "1.12.3"
quick-xml = { version = "0.39.2", features = ["serialize"] }
anyhow = "1.0.102"
once_cell = "1.21.4"
url = "2.5.8"
rust_xlsxwriter = "0.94.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
scraper = "0.26.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
