[package]
name = "rayview-meta-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rayview-meta-server"
path = "src/main.rs"

[dependencies]
shared = { path = "shared" }
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
